# sudoku

./: .gitignore  LICENSE  README.md  cabal.project.freeze  hie.yaml  package.yaml  problem  stack.yaml  sudoku.cabal  sudoku.csv  sudoku.prof
app/: Main.hs
src/: Sudoku.hs
src/Control/Monad/: Ext.hs
src/Data/: ExactCover.hs
src/Data/Foldable/: Ext.hs  Extra.hs
src/Math/: ExactCover.hs
test/: Spec.hs  sudoku.csv
