cabal-version: 1.12

name:           sudoku
version:        0.1.0.0
homepage:       https://github.com/githubuser/sudoku#readme
author:         Satoshi Takimoto
maintainer:     wasabi.nvim.st@gmail.com
copyright:      2021 Satoshi Takimoto
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/wasabi315/sudoku

library
  exposed-modules:
      Math.ExactCover
      Sudoku
  other-modules:
      Data.Foldable.Ext
      Paths_sudoku
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , dlist
  default-language: Haskell2010

executable sudoku
  main-is: Main.hs
  other-modules:
      Paths_sudoku
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , sudoku
  default-language: Haskell2010

test-suite sudoku-test
  type: exitcode-stdio-1.0
  main-is: Tasty.hs
  other-modules:
      Paths_sudoku
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , sudoku
    , tasty
    , tasty-discover
  default-language: Haskell2010
